--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
-<p></p>
-<p></p>
-<p></p>
 <p>你好！这里是一个个人小空间！主要用于存放碎碎念和OC相关——</p>
 <p>目前正在缓慢搭载中，因为是学牲还是咕咕所以进度你们也是知道的.jpg </p>
 <p>总之很高兴见到你啦！</p>
-<p></p>
+
+
 <p>呃，虽然不太可能，但是万一有人想联系我呢？（擦汗</p>
 <ul>
-  <li> <a href="http://wpa.qq.com/msgrd?v=3&uin=2541975393&site=qq&menu=yes">有事直接戳企鹅是最快的啦！</a> </li>
+  <li> <a href="tencent:// Addcontact/?fromId=45&fromSubId=1&subcmd=all&uin=2541975393&website=www.oicqzone.com">有事直接戳企鹅是最快的啦！</a> </li>
 </ul>
