--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<html>
+<head>
+<mate charset="utf-8">
+<title>私人碎片展览馆(https://aelier.github.io/rOmantiC/)</title>
+</head>
+<body>
+  
 <h1>Je sais ton amour  Je sais l'eau versée sur mon corps</h1>
 <p>你好！这里是一个个人小空间！主要用于存放碎碎念和OC相关——</p>
 <p>目前正在缓慢搭载中，因为是学牲还是咕咕所以进度你们也是知道的.jpg </p>
