--- a/index.html
+++ b/index.html
@@ -1,17 +1,33 @@
 <html>
 <head>
 <mate charset="utf-8">
-<title>私人碎片展览馆(https://aelier.github.io/rOmantiC/)</title>
+<title>私人碎片展览馆</title>
 </head>
 <body>
-  
-<h1>Je sais ton amour  Je sais l'eau versée sur mon corps</h1>
+    <hr>
+<h2><i>Je sais ton amour  Je sais l'eau versée sur mon corps.</i></h2>
+<br>
 <p>你好！这里是一个个人小空间！主要用于存放碎碎念和OC相关——</p>
-<p>目前正在缓慢搭载中，因为是学牲还是咕咕所以进度你们也是知道的.jpg </p>
+<p>目前正在缓慢搭载中，因为是学牲还是咕咕所以<b>进度你们也是知道的.jpg</b></p>
 <p>总之很高兴见到你啦！</p>
-
-
-<p>呃，虽然不太可能，但是万一有人想联系我呢？（擦汗</p>
+<hr>
+<br>
+<br>
+<br>
+<hr>
+<h3>↓(*Φ皿Φ*)来都来了，OC和碎碎念是这里的特色，不得不品尝啊！↓</h3>
+<ul>
+  <li> <b>我家OC【施工中……】</b></li>
+</ul>
+<ul>
+    <li><b>一些碎碎念【施工中……】</b></li>
+  </ul>
+<hr>
+<br>
+<br>
+<br>
+<hr>
+<p><del>呃，虽然不太可能，但是万一有人想联系我呢？（擦汗</del></p>
 <ul>
   <li> <a href="tencent:// Addcontact/?fromId=45&fromSubId=1&subcmd=all&uin=2541975393&website=www.oicqzone.com">有事直接戳企鹅是最快的啦！</a> </li>
 </ul>
