--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <html>
+<body style="background-color:F0FFFF;"></body>
 <head>
 <mate charset="utf-8">
 <title>私人碎片展览馆</title>
 </head>
 <body>
     <hr>
-<h2><i>Je sais ton amour  Je sais l'eau versée sur mon corps.</i></h2>
+<h2><i><abbr title="出自《太阳王》的《Je Fais De Toi, Mon Essentiel》。真的很好听，我哭我哭">Je sais ton amour  Je sais l'eau versée sur mon corps.</abbr></i></h2>
 <br>
 <p>你好！这里是一个个人小空间！主要用于存放碎碎念和OC相关——</p>
 <p>目前正在缓慢搭载中，因为是学牲还是咕咕所以<b>进度你们也是知道的.jpg</b></p>
@@ -15,12 +16,12 @@
 <br>
 <br>
 <hr>
-<h3>↓(*Φ皿Φ*)来都来了，OC和碎碎念是这里的特色，不得不品尝啊！↓</h3>
+<h3>↓来都来了，OC和碎碎念是这里的特色，不得不品尝啊！↓</h3>
 <ul>
-  <li> <b>我家OC【施工中……】</b></li>
+  <li> <b><abbr title="都是我的大宝贝">我家OC</abbr>【施工中……】</b></li>
 </ul>
 <ul>
-    <li><b>一些碎碎念【施工中……】</b></li>
+    <li><b>一些<abbr title="后期可能会细分">碎碎念</abbr>【施工中……】</b></li>
   </ul>
 <hr>
 <br>
