--- a/index.html
+++ b/index.html
@@ -6,17 +6,16 @@
 </head>
 <body>
     <hr>
-<h2><i><abbr title="出自《太阳王》的《Je Fais De Toi, Mon Essentiel》。真的很好听，我哭我哭">Je sais ton amour  Je sais l'eau versée sur mon corps.</abbr></i></h2>
+<h2 style="font-family:verdana;color:rgb(69, 65, 121)"><i><abbr title="出自《太阳王》的《Je Fais De Toi, Mon Essentiel》。真的很好听，我哭我哭">Je sais ton amour  Je sais l'eau versée sur mon corps.</abbr></i></h2>
 <br>
 <p>你好！这里是一个个人小空间！主要用于存放碎碎念和OC相关——</p>
-<p>目前正在缓慢搭载中，因为是学牲还是咕咕所以<b>进度你们也是知道的.jpg</b></p>
+<p>目前正在缓慢搭载中，因为是学牲还是咕咕所以<b style="font-family:verdana;color:rgb(127, 137, 160)">进度你们也是知道的.jpg</b></p>
 <p>总之很高兴见到你啦！</p>
 <hr>
 <br>
-<br>
-<br>
+
 <hr>
-<h3>↓来都来了，OC和碎碎念是这里的特色，不得不品尝啊！↓</h3>
+<h3 style="font-family:verdana;color:rgb(76, 93, 129)">↓来都来了，OC和碎碎念是这里的特色，不得不品尝啊！↓</h3>
 <ul>
   <li> <b><abbr title="都是我的大宝贝">我家OC</abbr>【施工中……】</b></li>
 </ul>
@@ -28,7 +27,7 @@
 <br>
 <br>
 <hr>
-<p><del>呃，虽然不太可能，但是万一有人想联系我呢？（擦汗</del></p>
+<p><del><small style="font-family:verdana;color:rgb(117, 72, 117)">呃，虽然不太可能，但是万一有人想联系我呢？（擦汗</small></del></p>
 <ul>
   <li> <a href="tencent:// Addcontact/?fromId=45&fromSubId=1&subcmd=all&uin=2541975393&website=www.oicqzone.com">有事直接戳企鹅是最快的啦！</a> </li>
 </ul>
