--- a/index.html
+++ b/index.html
@@ -8,26 +8,30 @@
     <hr>
 <h2 style="font-family:verdana;color:rgb(69, 65, 121)"><i><abbr title="出自《太阳王》的《Je Fais De Toi, Mon Essentiel》。真的很好听，我哭我哭">Je sais ton amour  Je sais l'eau versée sur mon corps.</abbr></i></h2>
 <br>
+<br>
 <p>你好！这里是一个个人小空间！主要用于存放碎碎念和OC相关——</p>
 <p>目前正在缓慢搭载中，因为是学牲还是咕咕所以<b style="font-family:verdana;color:rgb(127, 137, 160)">进度你们也是知道的.jpg</b></p>
 <p>总之很高兴见到你啦！</p>
 <hr>
 <br>
-
+<br>
 <hr>
 <h3 style="font-family:verdana;color:rgb(76, 93, 129)">↓来都来了，OC和碎碎念是这里的特色，不得不品尝啊！↓</h3>
 <ul>
-  <li> <b><abbr title="都是我的大宝贝">我家OC</abbr>【施工中……】</b></li>
+  <li> <b><abbr title="都是我的大宝贝"><a href="https://aelier.github.io/rOmantiC/OC.html">我家OC</a></abbr>【施工中……】</b></li>
 </ul>
 <ul>
     <li><b>一些<abbr title="后期可能会细分">碎碎念</abbr>【施工中……】</b></li>
   </ul>
+  <br>
+  <br>
 <hr>
 <br>
 <br>
 <br>
 <hr>
-<p><del><small style="font-family:verdana;color:rgb(117, 72, 117)">呃，虽然不太可能，但是万一有人想联系我呢？（擦汗</small></del></p>
-<ul>
-  <li> <a href="tencent:// Addcontact/?fromId=45&fromSubId=1&subcmd=all&uin=2541975393&website=www.oicqzone.com">有事直接戳企鹅是最快的啦！</a> </li>
-</ul>
+<br>
+<br>
+<br>
+<p align="right"><del><small style="font-family:verdana;color:rgb(117, 72, 117)">呃，虽然不太可能，但是万一有人想联系我呢？（擦汗</small></del></p>
+<p align="right">有事请直接戳企鹅：<a href="tencent:// Addcontact/?fromId=45&fromSubId=1&subcmd=all&uin=2541975393&website=www.oicqzone.com">2541975393</a> </p>
