--- a/OCIF.html
+++ b/OCIF.html
@@ -9,3 +9,17 @@
 <h2 align="center "style="font-family:verdana;color:rgb(69, 65, 121)"><i><small>如果我们改写命运?</small><br><abbr title="出自《马戏之王》-《Rewrite The Stars》">What if we rewrite the stars?</abbr></i></h2>
 <hr>
 <Br>
+<br>
+<br>
+<br>
+<Br>
+<br>
+<br>
+<br>
+<Br>
+<br>
+<br>
+<br>
+<br>
+<hr>
+<h2 align="right "style="font-family:verdana;color:rgb(69, 65, 121)"><i><br><small><abbr title="一切都会回到正轨。"><a href="https://aelier.github.io/rOmantiC/OCIF.html"></a>……返回起始之地。</abbr></small></i></h2>
