--- a/OC.html
+++ b/OC.html
@@ -21,3 +21,5 @@
 <br>
 <br>
 <br>
+<hr>
+<h2 align="right "style="font-family:verdana;color:rgb(69, 65, 121)"><i><br><small><abbr title="探索另一种可能性……"><a href="https://aelier.github.io/rOmantiC/OCIF.html"></a>……如果我们改写命运？</abbr></small></i></h2>
