--- a/OCIF.html
+++ b/OCIF.html
@@ -22,4 +22,4 @@
 <br>
 <br>
 <hr>
-<h2 align="right "style="font-family:verdana;color:rgb(69, 65, 121)"><i><br><small><abbr title="一切都会回到正轨。"><a href="https://aelier.github.io/rOmantiC/OCIF.html">……返回起始之地。</a></abbr></small></i></h2>
+<h2 align="right "style="font-family:verdana;color:rgb(69, 65, 121)"><i><br><small><abbr title="一切都会回到正轨。"><a href="https://aelier.github.io/rOmantiC/OC.html">……返回起始之地。</a></abbr></small></i></h2>
