--- a/OC.html
+++ b/OC.html
@@ -5,29 +5,28 @@
 <title>私人碎片展览馆-OC区大厅</title>
 </head>
 <body>
+<p style="text-align:right ;font-weight: bolder;"><a href="https://aelier.github.io/rOmantiC/">回到入口</a></p>
     <hr>
-<h2 align="center "style="font-family:verdana;color:rgb(69, 65, 121)"><i><small>从这里开始……</small><br><abbr title="出自《银河英雄传说》-《Tranquility》">It only takes one lone soul……</abbr></i></h2>
+<h2 style="text-align:center;font-family:verdana;color:rgb(69, 65, 121)"><i><small>从这里开始……</small><br><abbr title="出自《银河英雄传说》-《Tranquility》">It only takes one lone soul……</abbr></i></h2>
 <hr>
 <br>
 <br>
-<h3 align="center "style="font-family:verdana;color:rgb(69, 65, 121)">壹</h3>
-<p align="center ">也许是耳朵，也许是尾巴，也许是头部或者下肢……</p>
-<p align="center ">总之，现在世界上没有不含兽类特征的“怪物”。</p>
+<h3 style="text-align:center ;font-family:verdana;color:rgb(69, 65, 121)">壹</h3>
+<p style="text-align:center ">也许是耳朵，也许是尾巴，也许是头部或者下肢……</p>
+<p style="text-align:center ">总之，现在世界上没有不含兽类特征的“怪物”。</p>
 <br>
-<h4 align="center"><abbr title="我就说没人能拒绝毛茸茸吧！">你是想了解他们吗？</abbr></h4>
-<br>
-<hr>
-<br>
-<br>
-<h3 align="center "style="font-family:verdana;color:rgb(69, 65, 121)">贰</h3>
-<p align="center ">神离开了世界，</p>
-<p align="center ">我们失去了“父亲”。</p>
-<br>
-<h4 align="center"><abbr title="可是我还在施工中耶">你对他们比较感兴趣？</abbr></h4>
-<br>
+<h4 style="text-align:center "><abbr title="我就说没人能拒绝毛茸茸吧！">你是想了解他们吗？</abbr></h4>
 <br>
 <hr>
-<h2 align="right "style="font-family:verdana;color:rgb(69, 65, 121)"><i><br><small><abbr title="探索另一种可能性……"><a href="https://aelier.github.io/rOmantiC/OCIF.html">……如果我们改写命运？</a></abbr></small></i></h2>
-
-
+<br>
+<br>
+<h3 style="text-align:center ;font-family:verdana;color:rgb(69, 65, 121)">贰</h3>
+<p style="text-align:center ">神离开了世界，</p>
+<p style="text-align:center ">我们失去了“父亲”。</p>
+<br>
+<p style="text-align:center "><abbr title="可是我还在施工中耶">还是他们比较感兴趣？</abbr></h4>
+<br>
+<br>
+<hr>
+<h2 style="text-align:right ;font-family:verdana;color:rgb(51, 94, 160)"><i><br><small><abbr title="探索另一种可能性……"><a href="https://aelier.github.io/rOmantiC/OCIF.html">……如果我们改写命运？</a></abbr></small></i></h2>
 
