--- a/OCIF.html
+++ b/OCIF.html
@@ -5,8 +5,10 @@
 <title>私人碎片展览馆-OC区IF线</title>
 </head>
 <body>
+<p style="text-align:right ;font-weight: bolder;"><a href="https://aelier.github.io/rOmantiC/">回到入口</a></p>
+
     <hr>
-<h2 align="center "style="font-family:verdana;color:rgb(69, 65, 121)"><i><small>如果我们改写命运?</small><br><abbr title="出自《马戏之王》-《Rewrite The Stars》">What if we rewrite the stars?</abbr></i></h2>
+<h2 style="text-align:center ;font-family:verdana;color:rgb(69, 65, 121)"><i><small>如果我们改写命运?</small><br><abbr title="出自《马戏之王》-《Rewrite The Stars》">What if we rewrite the stars?</abbr></i></h2>
 <hr>
 <Br>
 <br>
@@ -22,4 +24,4 @@
 <br>
 <br>
 <hr>
-<h2 align="right "style="font-family:verdana;color:rgb(69, 65, 121)"><i><br><small><abbr title="一切都会回到正轨。"><a href="https://aelier.github.io/rOmantiC/OC.html">……返回起始之地。</a></abbr></small></i></h2>
+<h2 align="right "style="font-family:verdana;color:rgb(51, 94, 160)"><i><br><small><abbr title="一切都会回到正轨。"><a href="https://aelier.github.io/rOmantiC/OC.html">……返回起始之地。</a></abbr></small></i></h2>
