--- a/OC.html
+++ b/OC.html
@@ -24,7 +24,7 @@
 <p style="text-align:center ">神离开了世界，</p>
 <p style="text-align:center ">我们失去了“父亲”。</p>
 <br>
-<h4 style="text-align:center "><abbr title="可是我还在施工中耶">还是他们比较感兴趣？</abbr></h4>
+<h4 style="text-align:center "><abbr title="可是我还在施工中耶">还是对他们比较感兴趣？</abbr></h4>
 <br>
 <br>
 <hr>
