--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <title>私人碎片展览馆</title>
 </head>
 <body>
+<body style="background-image:url(https://aelier.github.io/rOmantiC/1.png)">
     <hr>
 <h2 style="font-family:verdana;color:rgb(69, 65, 121)"><i><abbr title="出自《太阳王》的《Je Fais De Toi, Mon Essentiel》。真的很好听，我哭我哭">Je sais ton amour  Je sais l'eau versée sur mon corps.</abbr></i></h2>
 <br>
