--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <html>
-<body style="background-color:F0FFFF;"></body>
+<body style="background-image:url(https://aelier.github.io/rOmantiC/1.png);background-color:F0FFFF;"></body>
 <head>
 <mate charset="utf-8">
 <title>私人碎片展览馆</title>
 </head>
-<body>
-<body style="background-image:url(https://aelier.github.io/rOmantiC/1.png)">
-    <hr>
-<h2 style="font-family:verdana;color:rgb(69, 65, 121)"><i><abbr title="出自《太阳王》的《Je Fais De Toi, Mon Essentiel》。真的很好听，我哭我哭">Je sais ton amour  Je sais l'eau versée sur mon corps.</abbr></i></h2>
+<hr>
 <br>
+<br>
+<h2 style="font-family:verdana;color:rgb(69, 65, 121)"><i><abbr title="出自《太阳王》的《Je Fais De Toi, Mon Essentiel》。真的很好听，我哭我哭">Je sais ton amour  Je sais l'eau versée sur mon corps.</abbr></i></h2>
 <br>
 <p>你好！这里是一个个人小空间！主要用于存放碎碎念和OC相关——</p>
 <p>目前正在缓慢搭载中，因为是学牲还是咕咕所以<b style="font-family:verdana;color:rgb(127, 137, 160)">进度你们也是知道的.jpg</b></p>
@@ -32,6 +31,10 @@
 <br>
 <hr>
 <br>
+<br>
+<br>
+<p align="right"><del><small style="font-family:verdana;color:rgb(117, 72, 117)">呃，虽然不太可能，但是万一有人想联系我呢？（擦汗</small></del></p>
+<p align="right">有事请直接戳企鹅：<a href="tencent:// Addcontact/?fromId=45&fromSubId=1&subcmd=all&uin=2541975393&website=www.oicqzone.com">2541975393</a> </p>
 <br>
 <br>
 <p align="right"><del><small style="font-family:verdana;color:rgb(117, 72, 117)">呃，虽然不太可能，但是万一有人想联系我呢？（擦汗</small></del></p>
