--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<body style="background-image:url(https://aelier.github.io/rOmantiC/1.png);background-color:F0FFFF;"></body>
+<body style="background-image:url(https://aelier.github.io/rOmantiC/1.png);background-attachment: fixed;background-repeat: no-repeat;background-color:F0FFFF;"></body>
 <head>
 <mate charset="utf-8">
 <title>私人碎片展览馆</title>
@@ -31,10 +31,6 @@
 <br>
 <hr>
 <br>
-<br>
-<br>
-<p align="right"><del><small style="font-family:verdana;color:rgb(117, 72, 117)">呃，虽然不太可能，但是万一有人想联系我呢？（擦汗</small></del></p>
-<p align="right">有事请直接戳企鹅：<a href="tencent:// Addcontact/?fromId=45&fromSubId=1&subcmd=all&uin=2541975393&website=www.oicqzone.com">2541975393</a> </p>
 <br>
 <br>
 <p align="right"><del><small style="font-family:verdana;color:rgb(117, 72, 117)">呃，虽然不太可能，但是万一有人想联系我呢？（擦汗</small></del></p>
