--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <hr>
 <br>
 <br>
-<h2 style="font-family:verdana;color:rgb(69, 65, 121)"><i><abbr title="出自《太阳王》的《Je Fais De Toi, Mon Essentiel》。真的很好听，我哭我哭">Je sais ton amour  Je sais l'eau versée sur mon corps.</abbr></i></h2>
+<h1 style="font-family:verdana;color:rgb(69, 65, 121)"><i><abbr title="出自《太阳王》的《Je Fais De Toi, Mon Essentiel》。真的很好听，我哭我哭">Je sais ton amour  Je sais l'eau versée sur mon corps.</abbr></i></h1>
 <br>
 <p>你好！这里是一个个人小空间！主要用于存放碎碎念和OC相关——</p>
 <p>目前正在缓慢搭载中，因为是学牲还是咕咕所以<b style="font-family:verdana;color:rgb(127, 137, 160)">进度你们也是知道的.jpg</b></p>
@@ -27,11 +27,17 @@
   <br>
 <hr>
 <br>
-<br>
+<p style="color: rgb(87, 75, 189);">没有想到我又延迟开学了！我胡汉三又回来了.jpg</div></p>
+<p>这里是突如其来的碎碎念！一时兴起开始搭建网站，不知道什么时候能做好，不过html比想象中的好上手呢！
+  <br>虽然目前还是做的丑丑的，不过成就感hin强！希望返校前能做出一个宝贝的介绍页面，应该可以……吧（……）
+  <br>背景是我家的宝贝猫猫芬妮亲~真是让我的界面漂亮不少（点头
+  <br>^ ^暂时就是这样啦~期待和你的下次见面~</p>
+<p style="text-align: end;">2022/2/18 打鸡血的凌晨</p>
 <br>
 <hr>
 <br>
 <br>
 <br>
-<p align="right"><del><small style="font-family:verdana;color:rgb(117, 72, 117)">呃，虽然不太可能，但是万一有人想联系我呢？（擦汗</small></del></p>
-<p align="right">有事请直接戳企鹅：<a href="tencent:// Addcontact/?fromId=45&fromSubId=1&subcmd=all&uin=2541975393&website=www.oicqzone.com">2541975393</a> </p>
+<p style="text-align:right "><del><small style="font-family:verdana;color:rgb(117, 72, 117)">呃，虽然不太可能，但是万一有人想联系我呢？（擦汗</small></del></p>
+<p style="text-align:right ">有事请直接戳企鹅：<a href="tencent:// Addcontact/?fromId=45&fromSubId=1&subcmd=all&uin=2541975393&website=www.oicqzone.com">2541975393</a> </p>
+<p style="text-align:right ">邮箱也不是不方便：<a href="mailto=weboth@foxmail.com">weboth@foxmail.com</a></p>
