--- a/index.html
+++ b/index.html
@@ -7,16 +7,26 @@
 <hr>
 <br>
 <br>
-<h1 style="font-family:verdana;color:rgb(69, 65, 121)"><i><abbr title="出自《太阳王》的《Je Fais De Toi, Mon Essentiel》。真的很好听，我哭我哭">Je sais ton amour  Je sais l'eau versée sur mon corps.</abbr></i></h1>
+<pre><h1 style="font-family:verdana;color:rgb(69, 65, 121);text-shadow: 2px 1px 2px rgb(48, 135, 161);ch;"><i><abbr title="出自《太阳王》的《Je Fais De Toi, Mon Essentiel》。真的很好听，我哭我哭">Je sais ton amour     Je sais l'eau versée sur mon corps.</pre></abbr></i></h1>
 <br>
-<p>你好！这里是一个个人小空间！主要用于存放碎碎念和OC相关——</p>
+<p>你好！我是版头！这里是一个个人小空间！主要用于存放碎碎念和OC相关——</p>
 <p>目前正在缓慢搭载中，因为是学牲还是咕咕所以<b style="font-family:verdana;color:rgb(127, 137, 160)">进度你们也是知道的.jpg</b></p>
 <p>总之很高兴见到你啦！</p>
-<hr>
-<br>
 <br>
 <hr>
-<h3 style="font-family:verdana;color:rgb(76, 93, 129)">↓来都来了，OC和碎碎念是这里的特色，不得不品尝啊！↓</h3>
+<br>
+<p style="color: rgb(87, 75, 189);">没有想到我又延迟开学了！我胡汉三又回来了.jpg</div></p>
+<p>这里是突如其来的碎碎念！一时兴起开始搭建网站，不知道什么时候能做好，不过html比想象中的好上手呢！
+  <br>虽然目前还是做的丑丑的，不过成就感hin强！希望返校前能做出一个宝贝的介绍页面，应该可以……吧（……）
+  <br>背景是我家的宝贝猫猫芬妮亲~真是让我的界面漂亮不少（点头
+  <br><b>不过网站不太适配手机呢……看起来可能会怪怪的</b><del>所以就给使用电脑浏览的朋友留下了一些彩蛋啦！</del>
+  <br>^ ^暂时就是这样!期待和你的下次见面~</p>
+  <br>
+<p style="text-align: end;">2022/2/18 打鸡血的凌晨</p>
+<br>
+<hr>
+<hr>
+<h3 style="font-family:verdana;color:rgb(76, 93, 129);text-shadow: 1px 1px 1px rgb(48, 135, 161);">↓来都来了，OC和碎碎念是这里的特色，不得不品尝啊！↓</h3>
 <ul>
   <li> <b><abbr title="都是我的大宝贝"><a href="https://aelier.github.io/rOmantiC/OC.html">我家OC</a></abbr>【施工中……】</b></li>
 </ul>
@@ -26,16 +36,6 @@
   <br>
   <br>
 <hr>
-<br>
-<p style="color: rgb(87, 75, 189);">没有想到我又延迟开学了！我胡汉三又回来了.jpg</div></p>
-<p>这里是突如其来的碎碎念！一时兴起开始搭建网站，不知道什么时候能做好，不过html比想象中的好上手呢！
-  <br>虽然目前还是做的丑丑的，不过成就感hin强！希望返校前能做出一个宝贝的介绍页面，应该可以……吧（……）
-  <br>背景是我家的宝贝猫猫芬妮亲~真是让我的界面漂亮不少（点头
-  <br>^ ^暂时就是这样啦~期待和你的下次见面~</p>
-<p style="text-align: end;">2022/2/18 打鸡血的凌晨</p>
-<br>
-<hr>
-<br>
 <br>
 <br>
 <p style="text-align:right "><del><small style="font-family:verdana;color:rgb(117, 72, 117)">呃，虽然不太可能，但是万一有人想联系我呢？（擦汗</small></del></p>
