--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <html>
 <body style="background-image:url(https://aelier.github.io/rOmantiC/1.png);background-attachment: fixed;background-repeat: no-repeat;background-color:F0FFFF;"></body>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />
 <mate charset="utf-8">
 <title>私人碎片展览馆</title>
 </head>
 <hr>
 <br>
 <br>
-<pre><h1 style="font-family:verdana;color:rgb(69, 65, 121);text-shadow: 2px 1px 2px rgb(48, 135, 161);ch;"><i><abbr title="出自《太阳王》的《Je Fais De Toi, Mon Essentiel》。真的很好听，我哭我哭">Je sais ton amour     Je sais l'eau versée sur mon corps.</pre></abbr></i></h1>
+<pre><h1 style="font-family:verdana;color:rgb(69, 65, 121);text-shadow: 2px 1px 2px rgb(48, 135, 161);"><i><abbr title="出自《太阳王》的《Je Fais De Toi, Mon Essentiel》。真的很好听，我哭我哭">Je sais ton amour     Je sais l'eau versée sur mon corps.</pre></abbr></i></h1>
 <br>
 <p>你好！我是版头！这里是一个个人小空间！主要用于存放碎碎念和OC相关——</p>
 <p>目前正在缓慢搭载中，因为是学牲还是咕咕所以<b style="font-family:verdana;color:rgb(127, 137, 160)">进度你们也是知道的.jpg</b></p>
