--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <html>
 <body style="background-image:url(https://aelier.github.io/rOmantiC/1.png);background-attachment: fixed;background-repeat: no-repeat;background-color:F0FFFF;"></body>
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />
-<mate charset="utf-8">
+ <mate charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />
 <title>私人碎片展览馆</title>
 </head>
 <hr>
