--- a/OC.html
+++ b/OC.html
@@ -1,7 +1,8 @@
 <html>
 <body style="background-color:F0FFFF;"></body>
 <head>
-<mate charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />
+    <mate charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" >
 <title>私人碎片展览馆-OC区大厅</title>
 </head>
 <body>
