--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <html>
 <body style="background-image:url(https://aelier.github.io/rOmantiC/1.png);background-attachment: fixed;background-repeat: no-repeat;background-color:F0FFFF;"></body>
 <head>
-    <mate charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" >
+<mate charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />
 <title>私人碎片展览馆</title>
 </head>
 <hr>
 <br>
 <br>
-<h1 style="font-family:verdana;color:rgb(69, 65, 121);text-shadow: 2px 1px 2px rgb(48, 135, 161);"><i><abbr title="出自《太阳王》的《Je Fais De Toi, Mon Essentiel》。真的很好听，我哭我哭">Je sais ton amour<br>Je sais l'eau versée sur mon corps.</abbr></i></h1>
+<pre><h1 style="font-family:verdana;color:rgb(69, 65, 121);text-shadow: 2px 1px 2px rgb(48, 135, 161);"><i><abbr title="出自《太阳王》的《Je Fais De Toi, Mon Essentiel》。真的很好听，我哭我哭">Je sais ton amour     Je sais l'eau versée sur mon corps.</pre></abbr></i></h1>
 <br>
 <p>你好！我是版头！这里是一个个人小空间！主要用于存放碎碎念和OC相关——</p>
 <p>目前正在缓慢搭载中，因为是学牲还是咕咕所以<b style="font-family:verdana;color:rgb(127, 137, 160)">进度你们也是知道的.jpg</b></p>
@@ -40,5 +39,5 @@
 <br>
 <br>
 <p style="text-align:right "><del><small style="font-family:verdana;color:rgb(117, 72, 117)">呃，虽然不太可能，但是万一有人想联系我呢？（擦汗</small></del></p>
-<p style="text-align:right ">有事请直接戳企鹅：<a href="tencent:// Addcontact/?fromId=45&fromSubId=1&subcmd=all&uin=2541975393&website=www.oicqzone.com">2541975393</a> </p>
-<p style="text-align:right ">邮箱也不是不方便：<a href="mailto=weboth@foxmail.com">weboth@foxmail.com</a></p>
+<p style="text-align:right ">有事请直接戳企鹅：<a href="tencent://AddContact/?fromId=45&fromSubId=1&subcmd=all&uin=2541975393&website=www.oicqzone.com">2541975393</a> </p>
+<p style="text-align:right ">邮箱也不是不方便：<a href="mailto:weboth@foxmail.com">weboth@foxmail.com</a></p>
