--- a/OC.html
+++ b/OC.html
@@ -1,8 +1,7 @@
 <html>
 <body style="background-color:F0FFFF;"></body>
 <head>
-    <mate charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" >
+    <mate charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />
 <title>私人碎片展览馆-OC区大厅</title>
 </head>
 <body>
@@ -16,7 +15,7 @@
 <p style="text-align:center ">也许是耳朵，也许是尾巴，也许是头部或者下肢……</p>
 <p style="text-align:center ">总之，现在世界上没有不含兽类特征的“怪物”。</p>
 <br>
-<h4 style="text-align:center "><abbr title="我就说没人能拒绝毛茸茸吧！">你是想了解他们吗？</abbr></h4>
+<h4 style="text-align:center "><abbr title="我就说没人能拒绝毛茸茸吧！"><a href="https://aelier.github.io/rOmantiC/OC_WORLD/OC_MainWorld">你是想了解他们吗？</a></abbr></h4>
 <br>
 <hr>
 <br>
@@ -25,9 +24,8 @@
 <p style="text-align:center ">神离开了世界，</p>
 <p style="text-align:center ">我们失去了“父亲”。</p>
 <br>
-<h4 style="text-align:center "><abbr title="可是我还在施工中耶">还是对他们比较感兴趣？</abbr></h4>
+<p style="text-align:center "><abbr title="可是我还在施工中耶">还是他们比较感兴趣？</abbr></h4>
 <br>
 <br>
 <hr>
 <h2 style="text-align:right ;font-family:verdana;color:rgb(51, 94, 160)"><i><br><small><abbr title="探索另一种可能性……"><a href="https://aelier.github.io/rOmantiC/OCIF.html">……如果我们改写命运？</a></abbr></small></i></h2>
-
