--- a/OC_WORLD/OC_NotGodWorld.html
+++ b/OC_WORLD/OC_NotGodWorld.html
@@ -1,4 +1,6 @@
 <html>
+     <mate charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" >
 <p style="text-align:center;font-family:verdana;color:rgb(255, 0, 0)"><small>！warning！</small></p>
 <p style="text-align:center;font-family:verdana;color:rgba(69, 65, 121 ,0.7)"><small>本世界观延申自企划“混沌嘉年华”，部分孩子原型曾参与企划。
     <br>目前参企OC完善设定后差不多是“拎出来养”的状态，且世界观相比企划原案延伸变动较大，可以当作新世界来了解。<br><span style="background-color:rgb(69, 65, 121);">*人话：参与过这个企划的朋友可能对一些孩子很眼熟，那些宝那也是我家的！</span></small></p>
