--- a/OC_WORLD/OC_MainWorld.html
+++ b/OC_WORLD/OC_MainWorld.html
@@ -143,7 +143,7 @@ pre{font-size: 14px; font: weight 100px;font-family: "微软雅黑"; color:rgb(0
     </tr>
         <tr>
         <td class="white" align="center"> 404 NOT FOUND … </td>
-        <td class="blue" align="center"> Ul<span style="background-color:#6464a0 ;"><abbr title="?!啊这个真的不是我涂黑的啊！这是他自己干的！">▇▇▇▇▇▇</abbr>></span>e<br>“鸣羊” </td>
+        <td class="blue" align="center"> Ul<span style="background-color:#6464a0 ;"><abbr title="?!啊这个真的不是我涂黑的啊！这是他自己干的！">▇▇▇▇▇▇</abbr></span>e<br>“鸣羊” </td>
         <td class="white" align="center"> 404 NOT FOUND … </td>
         <td class="white" align="center"> 403 FOR BIDDEN ?</td>
         <td class="white" align="center"> 404 NOT FOUND … </td>
