--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <p>这里是突如其来的碎碎念！一时兴起开始搭建网站，不知道什么时候能做好，不过html比想象中的好上手呢！
   <br>虽然目前还是做的丑丑的，不过成就感hin强！希望返校前能做出一个宝贝的介绍页面，应该可以……吧（……）
   <br>背景是我家的宝贝猫猫芬妮亲~真是让我的界面漂亮不少（点头
-  <br><b>不过网站不太适配手机呢……看起来可能会怪怪的</b><del>所以就给使用电脑浏览的朋友留下了一些彩蛋啦！</del>
+  <br><b>欸！我偷偷适配手机了！但是彩蛋还是电脑限定！</b><del>不过网站不太适配手机呢……看起来可能会怪怪的，所以就给使用电脑浏览的朋友留下了一些彩蛋啦！</del>
   <br>^ ^暂时就是这样!期待和你的下次见面~</p>
   <br>
 <p style="text-align: end;">2022/2/18 打鸡血的凌晨</p>
