--- a/OC_WORLD/OC_MainWorld.html
+++ b/OC_WORLD/OC_MainWorld.html
@@ -104,7 +104,7 @@ pre{font-size: 14px; font: weight 100px;font-family: "微软雅黑"; color:rgb(0
         <td class="blue" align="center"><abbr title="谁不喜欢狗狗，给我拖出去犬决！">Malamute</abbr><br>玛拉穆特 </td>
         <td class="blue" align="center"><abbr title="宝,你的智商真的很高,妈咪也真的猜不透你">Neofelis</abbr><br>尼弗利斯</td>
         <td class="white" align="center"> 404 NOT FOUND … </td>
-        <td class="blue" align="center"><abbr title="你明明不是直男但是你的情商真的很让我担心">Panthera</abbr><br>帕泽拉</td>
+        <td class="blue" align="center"><abbr title="挖，帕泽拉你又被我们缺德辣！">Panthera</abbr><br>帕泽拉</td>
         <td class="white" align="center"> 404 NOT FOUND … </td>
         <td class="blue " align="center"><abbr title="能表演一下那个吗，就是在水中洗棉花糖……">Raccoon</abbr><br>瑞可</td>
         <td class="white" align="center"> 404 NOT FOUND … </td>
