--- a/OC_WORLD/OC_MainWorld.html
+++ b/OC_WORLD/OC_MainWorld.html
@@ -110,7 +110,7 @@ pre{font-size: 14px; font: weight 100px;font-family: "微软雅黑"; color:rgb(0
         <td class="white" align="center"> 404 NOT FOUND … </td>
         </tr>
         <tr>
-            <td class="blue" align="center"><abbr title="。宝，你惨到我不知道说什么好，先滑跪一个在这里吧！">Mus</abbr><br>慕斯 </td>
+            <td class="blue" align="center"><abbr title="。宝，你好惨，但是妈咪是真的爱你，呜呜，先滑跪一个在这里！">Mus</abbr><br>慕斯 </td>
             <td class="white" align="center"> 404 NOT FOUND … </td>
             <td class="white" align="center"> 404 NOT FOUND … </td>
             <td class="blue" align="center"><abbr title="列队欢迎我们永远的十八岁·少女心·一拳一个帕泽拉·猫猫公主！(除了一拳一个其他都是我编的)">Phosphene</abbr><br>帕斯芬妮</td>
