--- a/OC_WORLD/OC_MainWorld.html
+++ b/OC_WORLD/OC_MainWorld.html
@@ -1,5 +1,12 @@
 <html>
-<body style="background-color:F0FFFF;"></body>
+<body style="background-image:url(https://aelier.github.io/rOmantiC/1.png);background-attachment: fixed;background-repeat: no-repeat;background-color:F0FFFF;"></body>
+<body oncontextmenu=self.event.returnValue=false>
+  <frameset rows="47,*" framespacing="0" border="0" frameborder="0">
+      <frame name="header" scrolling="no" noresize target="main" src="top.htm">
+      <frame name="main" src="main.htm" scrolling="auto" target="_self">
+      <noframes>
+      </noframes>
+      </frameset>
 <head>
     <mate charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" >
@@ -143,7 +150,7 @@ pre{font-size: 14px; font: weight 100px;font-family: "微软雅黑"; color:rgb(0
     </tr>
         <tr>
         <td class="white" align="center"> 404 NOT FOUND … </td>
-        <td class="blue" align="center"> Ul<span style="background-color:#6464a0 ;"><abbr title="?!啊这个真的不是我涂黑的啊！这是他自己干的！">▇▇▇▇▇▇</abbr></span>e<br>“鸣羊” </td>
+        <td class="blue" align="center"> Ul<span style="background-color:#6464a0 ;"><abbr title="?!啊这个真的不是我改的啊！这是他自己写的！">和你没那么熟</abbr></span>e<br>“鸣羊” </td>
         <td class="white" align="center"> 404 NOT FOUND … </td>
         <td class="white" align="center"> 403 FOR BIDDEN ?</td>
         <td class="white" align="center"> 404 NOT FOUND … </td>
@@ -160,3 +167,7 @@ pre{font-size: 14px; font: weight 100px;font-family: "微软雅黑"; color:rgb(0
             <td class="white" align="center"> 404 NOT FOUND … </td>
             </tr>
         </table>
+<br>
+<br>
+<br>
+<br>
