--- a/OCIF.html
+++ b/OCIF.html
@@ -1,5 +1,5 @@
 <html>
-<body style="background-image:url(https://aelier.github.io/rOmantiC/1.png);background-attachment: fixed;background-repeat: no-repeat;background-color:F0FFFF;"></body>
+<body style="background-color:F0FFFF;"></body>
 <body oncontextmenu=self.event.returnValue=false>
   <frameset rows="47,*" framespacing="0" border="0" frameborder="0">
       <frame name="header" scrolling="no" noresize target="main" src="top.htm">
