--- a/OC.html
+++ b/OC.html
@@ -1,6 +1,71 @@
+<!doctype html>
 <html>
-<body style="background-color:F0FFFF">
-    <body oncontextmenu=self.event.returnValue=false><!--←禁止右键-->
+<head>
+<meta charset="utf-8">
+
+<style>
+body {
+    background: #F0FFFF;
+}
+
+.message {
+    position: fixed;
+    width: 80%;
+    text-align: center;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translateX(-50%) translateY(-50%);
+            transform: translateX(-50%) translateY(-50%);
+    font-size: 1.2rem;
+    font-family: 'Baloo Bhaina', cursive;
+    color: #706C61;
+}</style>
+</head>
+<body>
+
+<script src="click/mo.min.js"></script>
+<script src="click/mojs-player.min.js"></script>
+
+<script>
+'use strict';
+
+var _extends = Object.assign || function (target) { for (var i = 1; i < arguments.length; i++) {if (window.CP.shouldStopExecution(2)){break;} var source = arguments[i]; for (var key in source) {if (window.CP.shouldStopExecution(1)){break;} if (Object.prototype.hasOwnProperty.call(source, key)) { target[key] = source[key]; } }
+window.CP.exitedLoop(1);
+ }
+window.CP.exitedLoop(2);
+ return target; };
+
+var OPTS = {
+    fill: 'none',
+    radius: 25,
+    strokeWidth: { 50: 0 },
+    scale: { 0: 1 },
+    angle: { 'rand(-35, -70)': 0 },
+    duration: 500,
+    left: 0,
+    top: 0,
+    easing: 'cubic.out'
+};
+
+var circle1 = new mojs.Shape(_extends({}, OPTS, {
+    stroke: '#6495ED'
+}));
+
+var circle2 = new mojs.Shape(_extends({}, OPTS, {
+    radius: { 0: 15 },
+    strokeWidth: { 30: 0 },
+    stroke: '#7B68EE',
+    delay: 'rand(75, 150)'
+}));
+
+document.addEventListener('click', function (e) {
+    circle1.tune({ x: e.pageX, y: e.pageY }).replay();
+
+    circle2.tune({ x: e.pageX, y: e.pageY }).replay();
+});</script>
+</body>
+</html>
+<body oncontextmenu=self.event.returnValue=false onselectstart="return false"><!--←禁止左右键-->
     <script>
         //按键触发
     document.onkeydown = function(){
@@ -22,39 +87,35 @@
         event.keyCode = 0;
         event.returnValue = false;}
         };
-        //网站禁止选择文字↓
-        document.body.onselectstart = function() {
-        self.event.returnValue=false
-        };
     </script>
     <head>
         <mate charset="utf-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" >
-    
-<title>私人碎片展览馆-OC区大厅</title>
-</head>
-<body>
-<p style="text-align:right ;font-weight: bolder;"><a href="https://aelier.github.io/rOmantiC/">回到入口</a></p>
+    <title>私人碎片展览馆-OC区大厅</title>
+    </head>
+    <body>
+    <p style="text-align:right ;font-weight: bolder;"><a href="https://aelier.github.io/rOmantiC/">回到入口</a></p>
+        <hr>
+    <h2 style="text-align:center;font-family:verdana;color:rgb(69, 65, 121)"><i><small>从这里开始……</small><br><abbr title="出自《银河英雄传说》-《Tranquility》">It only takes one lone soul……</abbr></i></h2>
     <hr>
-<h2 style="text-align:center;font-family:verdana;color:rgb(69, 65, 121)"><i><small>从这里开始……</small><br><abbr title="出自《银河英雄传说》-《Tranquility》">It only takes one lone soul……</abbr></i></h2>
-<hr>
-<br>
-<br>
-<h3 style="text-align:center ;font-family:verdana;color:rgb(69, 65, 121)">壹</h3>
-<p style="text-align:center ">也许是耳朵，也许是尾巴，也许是头部或者下肢……</p>
-<p style="text-align:center ">总之，现在世界上没有不含兽类特征的“怪物”。</p>
-<br>
-<h4 style="text-align:center "><abbr title="我就说没人能拒绝毛茸茸吧！"><a href="https://aelier.github.io/rOmantiC/OC_WORLD/OC_MainWorld">你是想了解他们吗？</a></abbr></h4>
-<br>
-<hr>
-<br>
-<br>
-<h3 style="text-align:center ;font-family:verdana;color:rgb(69, 65, 121)">贰</h3>
-<p style="text-align:center ">神离开了世界，</p>
-<p style="text-align:center ">我们失去了“父亲”。</p>
-<br>
-<p style="text-align:center "><abbr title="可是我还在施工中耶">还是你对他们比较感兴趣？</abbr></h4>
-<br>
-<br>
-<hr>
-<h2 style="text-align:right ;font-family:verdana;color:rgb(51, 94, 160)"><i><br><small><abbr title="探索另一种可能性……"><a href="https://aelier.github.io/rOmantiC/OCIF.html">……如果我们改写命运？</a></abbr></small></i></h2>
+    <br>
+    <br>
+    <h3 style="text-align:center ;font-family:verdana;color:rgb(69, 65, 121)">壹</h3>
+    <p style="text-align:center ">也许是耳朵，也许是尾巴，也许是头部或者下肢……</p>
+    <p style="text-align:center ">总之，现在世界上没有不含兽类特征的“怪物”。</p>
+    <br>
+    <h4 style="text-align:center "><abbr title="我就说没人能拒绝毛茸茸吧！"><a href="https://aelier.github.io/rOmantiC/OC_WORLD/OC_MainWorld">你是想了解他们吗？</a></abbr></h4>
+    <br>
+    <hr>
+    <br>
+    <br>
+    <h3 style="text-align:center ;font-family:verdana;color:rgb(69, 65, 121)">贰</h3>
+    <p style="text-align:center ">神离开了世界，</p>
+    <p style="text-align:center ">我们失去了“父亲”。</p>
+    <br>
+    <p style="text-align:center "><abbr title="可是我还在施工中耶">还是你对他们比较感兴趣？</abbr></h4>
+    <br>
+    <br>
+    <hr>
+    <h2 style="text-align:right ;font-family:verdana;color:rgb(51, 94, 160)"><i><br><small><abbr title="探索另一种可能性……"><a href="https://aelier.github.io/rOmantiC/OCIF.html">……如果我们改写命运？</a></abbr></small></i></h2>
+    
