--- a/OC_WORLD/OC_MainWorld.html
+++ b/OC_WORLD/OC_MainWorld.html
@@ -132,7 +132,7 @@ document.addEventListener('click', function (e) {
     
         table .red {color:#7a2626}
         table .blue {color:#6464a0}
-        table .white {color:#ffffff00}
+        table .white {color:#F0FFFF}
     
     </style>
         <tr>
