--- a/OC.html
+++ b/OC.html
@@ -104,7 +104,8 @@ document.addEventListener('click', function (e) {
     <p style="text-align:center ">也许是耳朵，也许是尾巴，也许是头部或者下肢……</p>
     <p style="text-align:center ">总之，现在世界上没有不含兽类特征的“怪物”。</p>
     <br>
-    <h4 style="text-align:center "><abbr title="我就说没人能拒绝毛茸茸吧！"><a href="https://aelier.github.io/rOmantiC/OC_WORLD/OC_MainWorld">你是想了解他们吗？</a></abbr></h4>
+    <h4 style="text-align:center "><abbr title="我就说没人能拒绝毛茸茸吧！"><a href="https://aelier.github.io/rOmantiC/OC_WORLD/OC_MainWorld">-你是想了解他们吗？</a></abbr></h4>
+    <h4 style="text-align:center "><abbr title="?!为什么你这个页面这么高级啊（破音"><a href="https://aelier.github.io/rOmantiC/OC_WORLD/OC_MainWorld_view">-先了解一下常识如何？</a></abbr></h4>
     <br>
     <hr>
     <br>
