--- a/OC_WORLD/OC_MainWorld_view.html
+++ b/OC_WORLD/OC_MainWorld_view.html
@@ -92,6 +92,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" >
     <title>私人碎片展览馆-OC区-主世界世界观</title>
     <link href="css/17sucai.css" rel="stylesheet" type="text/css" />
      
