--- a/OC_WORLD/OC_MainWorld_view.html
+++ b/OC_WORLD/OC_MainWorld_view.html
@@ -123,7 +123,7 @@
             <p class="line-break margin-top-10"></p>
             <p class="margin-top-10" style="font-size: 17px;">也正是由于这种原始性，森林的居民人际关系较为简单，社交活动较为单纯。且其中很大一部分仍旧信仰原始神明，多设有具有“祭司”、“先知”等职。信仰及风俗习惯也大都根据其地域和传统不同而有所不同。在目前已知的几个大森林中，除了相对而言可以
                 较为自由地探索的<ruby><span title="“百无禁忌，漫无边际，无忌森林正如它的名字一样无边无忌。……也正如名字一样毫无顾忌地蚕食着周边。——《▇▇地名考》”">无忌森林</span><rt>Boundless Forest</rt></ruby>，其余的大森林都不建议在没有熟识森林的向导的情况下贸然进入。
-                即使不是大型的森林也请谨慎为好，<i>小心老猎手跌死在<span title="“我一看就知道是西边岛上的那群▇▇说出来骗傻子的，天天把就知道把一棵树当宝，我呕了你呢”">榉木</span>苗上</i>。不过森林永远是慷慨的，现在也有很多人即使不生活在森林中，也靠着森林给予的馈赠生活。</p>
+                即使不是大型的森林也请谨慎为好，<i>老猎手跌死在<span title="“我一看就知道是西边岛上的那群▇▇说出来骗傻子的，天天把就知道把一棵树当宝，我呕了你呢”">榉木</span>苗上</i>。不过森林永远是慷慨的，现在也有很多人即使不生活在森林中，也靠着森林给予的馈赠生活。</p>
             <br>
             <p style="text-align: right">|| <i>相信未来我们将了解更多信息…</i></p>
         </div>
@@ -143,7 +143,7 @@
                 这些城市大多归顺于<ruby>帝国<rt>Lions Empire</rt></ruby>或是其他国家以寻求庇护，也有部分城市归选择顺于一些当地较有名望的领主。很少有城市会选择<ruby><span title="“金钱、资源和军队，要么全部拥有，只有一个或者完全没有的独治城市就等着被掠夺或者消亡吧！时间会证明独治仅是个笑话！”">独治</span><rt><span title="“帝国在压迫，领主在剥削，除了独治，没有什么能给我们自由！”">Autonomy</span></rt></ruby>，其本身的开放性也使得一个城市想要仅依靠自身发展起来基本上成了不可能的事情。</p>
             <p class="line-break margin-top-10"></p>
             <p  class="margin-top-10" style="font-size: 17px;">城市散布于大陆各处，各种地理面貌的区域中都有城市诞生，只是多寡大小有别。城市中的生活习惯也往往同当地历史、地貌，甚至与其信仰有关——很多城市即使抛弃信仰也不会改变风俗。混杂在一起的种族、风俗、语言，迅速发展也使得现在城市的社会形态变得比以前
-                任何时代都要复杂。想要彻底了解一个城市的想法是不切实际的——即使是对生长在这里的人往往也是如此。要在一个城市定居下来的旅者往往需要很长时间来了解一个城市才能做决定，这也是一部分不断旅行或开始旅程的原因。<br>……至少从现在看来，明天一定是城市的。</p>
+                任何时代都要复杂。想要彻底了解一个城市的想法是不切实际的——即使是对生长在这里的人往往也是如此。要在一个城市定居下来的旅者往往需要很长时间来了解一个城市才能做决定，这也是一部分人不断旅行或开始旅程的原因。<br>……至少从现在看来，明天一定是城市的。</p>
                 <br>
             <p style="text-align: right">|| <i>相信未来我们将了解更多信息…</i></p>
         </div>
